User app adminBar: Admin panel is no longer hidden by default on admin pages. Made #showAdminBar button a bit bigger.

--- a/apps/adminBar/css/adminPanel.css
+++ b/apps/adminBar/css/adminPanel.css
@@ -21,10 +21,10 @@ button:focus {
     position: fixed;
     top: 10px;
     left: 0;
-    width: 88px;
+    width: 95px;
     padding: 0px;
-    height: 27px;
-    font-size: .5em;
+    height: 21px;
+    font-size: .3em;
     background: none;
     overflow: hidden;
 }
